# doc-sanitizer

./: .gitignore  DECISIONS.md  LICENSE  README.md  app.py  db.py  doc_sanitizer.spec  document_sanitiser_requirements.md  extractor.py  obfuscator.py  patterns.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
clients/: README.md  _sample_docx.py  https_client_demo.py  library_client_demo.py  sample.md
doc_sanitizer/: __init__.py  api.py  cli.py  crypto.py  extractor.py  obfuscator.py  paths.py  patterns.py  sanitizer.py  secrets_store.py  web.py
doc_sanitizer/static/: style.css
doc_sanitizer/templates/: index.html
doc_sanitizer/templates/partials/: candidates.html  dictionary.html  obfuscated.html  patterns.html  rehydrated.html  search_result.html
docs/: developer-guide.md  user-guide.md
examples/openai-privacy-filter/: README.md  opf_demo.py  sample_email.txt  sample_transcript.txt
tests/: test_sanitizer.py
